# vision-experiments

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
datasets/: arkitscenes.py  blendedmvs.py  co3d.py  dynamic_replica.py  habitat.py  megadepth.py  pointodyssey.py  scannetpp.py  sintel.py  spring_dataset.py  staticthings3d.py  tartanair.py  waymo.py  wildrgbd.py
datasets/base/: base_stereo_view_dataset.py  easy_dataset.py
datasets/utils/: cropping.py  transforms.py
datasets/viz/: viz.py
datasets_preprocess/: preprocess_waymo.py  viz.py
loaders/: pointodyssey.py
loaders/utils/: debug_utils.py  geometry.py  viz.py
notebooks/scratch/: 3d_tracks_viz.ipynb  dataset_playground.ipynb  explore.ipynb  rerun_explore.ipynb
stereo4d_code/: segmentation.py  track_optimization.py
utils/: geometry.py  image.py  misc.py  viz_demo.py
utils/po_utils/: geom.py  improc.py
